pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingObjectAmendDefDelimiter3.pkl
foo {
  bar {
    baz {
      y = 2
    }
  bar2 {
    x = 1
  }
}
